Factorize usermeta operations in a client, use it to set metadata directly in the upload/create Flow.
